Set width and height for carousel. This prevents jumping divs due to images not being same size

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,3 +5,8 @@
 .bottom-border-color{
   border-bottom: solid 5px #3097d1;
 }
+
+.carousel-inner > .item > img {
+  width:640px;
+  height:360px;
+}
